--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
           <label for="sur">
           Surname:
           </label>
-          <input type="text"
-          name="Surname"
-          id="sur"
-          autocomplete="off"
-          required
+          <input
+            type="text"
+            name="surname"
+            id="sur"
+            autocomplete="off"
+            required
           >
         </div>
 
@@ -31,11 +32,12 @@
           <label for="name">
           Name:
           </label>
-          <input type="text"
-          name="Name"
-          id="name"
-          autocomplete="off"
-          required
+          <input
+            type="text"
+            name="name"
+            id="name"
+            autocomplete="off"
+            required
           >
         </div>
 
@@ -43,12 +45,13 @@
           <label for="age">
           How old are You?
           </label>
-          <input type="number"
-          min="1" 
-          max="100"
-          name="Age"
-          value="12"
-          id="age"
+          <input
+            type="number"
+            min="1" 
+            max="100"
+            name="age"
+            value="12"
+            id="age"
           >
         </div>
 
@@ -56,9 +59,10 @@
           <label for="birth">
           Full date of birth:
           </label>
-          <input type="date"
-          name="Birth"
-          id="birth"
+          <input
+            type="date"
+            name="birth"
+            id="birth"
           >
         </div>
         
@@ -66,9 +70,10 @@
           <label for="terms">
           I accept the term of the agreement
           </label>
-          <input type="checkbox"
-          name="term"
-          id="terms"
+          <input
+            type="checkbox"
+            name="term"
+            id="terms"
           >
         </div>
       </fieldset>
@@ -79,12 +84,13 @@
           <label for="mail">
           E-mail:
           </label>
-          <input type="email"
-          name="email"
-          placeholder="email@example.com"
-          id="mail"
-          required
-          autocomplete="off"
+          <input
+            type="email"
+            name="email"
+            placeholder="email@example.com"
+            id="mail"
+            required
+            autocomplete="off"
           >
         </div>
 
@@ -92,11 +98,12 @@
           <label for="pas">
           Password:
           </label>
-          <input type="password"
-          name="pass"
-          id="pas"
-          autocomplete="off"
-          required
+          <input
+            type="password"
+            name="pass"
+            id="pas"
+            autocomplete="off"
+            required
           >
         </div>
       </fieldset>
@@ -106,17 +113,19 @@
         <div class="field-form">
           Do you love cats?
           <label>
-            <input type="radio"
-            name="animal"
-            value="y"
+            <input
+              type="radio"
+              name="animal"
+              value="y"
             >
             Yes
           </label>
 
           <label>
-            <input type="radio"
-            name="animal"
-            value="n"
+            <input
+              type="radio"
+              name="animal"
+              value="n"
             >
             No
           </label>
@@ -126,9 +135,10 @@
           <label for="col">
             What is your favorite color?
           </label>
-          <input type="color"
-          name="colors"
-          id="col"
+          <input
+            type="color"
+            name="colors"
+            id="col"
           >
         </div>
 
@@ -136,10 +146,11 @@
           <label for="tbed">
             What time do you go to bed?
           </label>
-          <input type="time"
-          name="timebed"
-          id="tbed"
-          required
+          <input
+            type="time"
+            name="timebed"
+            id="tbed"
+            required
           >
         </div>
 
@@ -159,12 +170,13 @@
           <label for="rwork">
             How do you rate our work?
           </label>
-          <input type="range"
-          name="rate"
-          id="rwork"
-          min="0"
-          max="10"
-          step="1"
+          <input
+            type="range"
+            name="rate"
+            id="rwork"
+            min="0"
+            max="10"
+            step="1"
           >
         </div>
       </fieldset>
